 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 2
============

* [cdunde]: Added new entity line drawing features by X7.

* [cdunde]: Updates, additions and a new mod addon by X7 for Quake 2.

* [cdunde/DanielPharos]: Added .lwo lightwave model export support and improved the importer.

* [cdunde/DanielPharos]: To add lwo model importer, uv's still not correct though.
          - Also added model import\export logging options for file types.

* [cdunde]: Setup new QuArK Model Editor Python model import export system.

* [cdunde]: Added full Linear Handles drag line drawing for all views in the Model Editor.

* [DanielPharos]: Fix errors when clicking menu items not being shown/reported.

* [cdunde]: Fixes and additions by X7 for rotation entities that use an origin brush.

* [cdunde]: Added new functions and handles for Half-Life 2 and other games
          - with the use of original code by Alexander, previous team member.
          - 1) New handle and line drawing for spotlight inter and outer cones.
          - 2) HL2 only, added handels for setting func_useableladder function (point0 & point1).
          - 3) HL2 only, added handels for setting func_breakable_glass and func_breakable_surf,
          -       (lowerleft, upperleft, lowerright and upperright).

* [cdunde]: Complete update of the WarsowEntities by X7, good job and thanks.

* [cdunde]: Fixed "Color Selector Dialog" to update correctly when needed.

* [cdunde]: Fixed the loss of the model editor causing the Skin-view to not work properly.

6.6.0 Beta 1
============

* [cdunde]: Some nice fixes by 'Who Gives A Dam' to the 'Worldcraft .fgd file' converter, thks.
